# ChangeLog for app-misc/cl-kde-meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-kde-meta-4.6.0-r1 (09 Feb 2011)

  09 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.6.0.ebuild, +cl-kde-meta-4.6.0-r1.ebuild:
  Add konqueror.

*cl-kde-meta-4.6.0 (01 Feb 2011)

  01 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-kde-meta-4.6.0.ebuild:
  Version bump

*cl-kde-meta-4.5.1-r2 (17 Dec 2010)

  17 Dec 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.5.1-r1.ebuild,
  +cl-kde-meta-4.5.1-r2.ebuild:
  Added localization for kdepim

*cl-kde-meta-4.5.1-r1 (24 Nov 2010)

  24 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.5.1.ebuild, +cl-kde-meta-4.5.1-r1.ebuild:
  excluded wicd, unmask KDE 4.5.x

  24 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-kde-meta-4.5.1.ebuild:
  Removed unstable net-wireless/bluedevil-1.0_p20100915 and kde-base/knode

*cl-kde-meta-4.4.4-r1 (22 Nov 2010)

  22 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.4.4.ebuild, +cl-kde-meta-4.4.4-r1.ebuild,
  cl-kde-meta-4.5.1.ebuild:
  daily update

  15 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-kde-meta-4.5.1.ebuild:
  Removed kgtk

  15 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-kde-meta-4.5.1.ebuild:
  Added net-wireless/bluedevil

*cl-kde-meta-4.5.1 (15 Sep 2010)

  15 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-kde-meta-4.5.1.ebuild:
  Added new version

  21 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-kde-meta-4.4.4.ebuild:
  Added kget

*cl-kde-meta-4.4.4 (08 Jun 2010)

  08 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-kde-meta-4.4.4.ebuild, -cl-kde-meta-10.5.83.ebuild:
  Changed version.

  07 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru> Manifest:
  Version bump
