@@ -1,4 +1,5 @@
 EBUILD cl-kde-meta-4.4.4-r1.ebuild 3754 RMD160 8b9245fcf0c1f67d88d9799f912a5f553f192a99 SHA1 6080812bfd295059cb6e4b2cd806e1e9890f68d7 SHA256 90f66ceb566cebba86a4f45fdeda2d009048daaf3f0f263515b5c4b0e98d0525
 EBUILD cl-kde-meta-4.5.1-r4.ebuild 3895 RMD160 bf8db31f93eb17ab48fa96449c0ae21e92f3f688 SHA1 75be6ca244b5974f8f0b396db5fbf4d832cdc409 SHA256 5c16ee9e9c66b9133d30baf4515e6d39d42066f45b8a6b4a68703ac0e9f37c2e
 EBUILD cl-kde-meta-4.6.0-r1.ebuild 6306 RMD160 af16aeacd863692f95408a23521dfc4cab2582cb SHA1 3249206758d55480b0787e0deeed63ee8dcd12bd SHA256 2fa40e1b1d8ea04c5896e66c364f2cfefd0d8b69b3035f3b2562b6eec3694414
-MISC ChangeLog 1971 RMD160 c7afb83653ed670f32250765028b14236c8fefbe SHA1 9f462e0aa9dcbd3b5c89567f26b13d4bb850b324 SHA256 a833a51fae7b66703edebe2a0e960640f85e9a1e4472ae40d9c0f5a784e33973
+EBUILD cl-kde-meta-4.6.0-r2.ebuild 6258 RMD160 273a320a64972c1251a2bd52f79620e6232451ea SHA1 983dbf0092635c09028cd446c20c561049b76eae SHA256 665530016cafb9974d13051a386b253137e80c4e51c77ae9aeb774f479520b52
+MISC ChangeLog 2133 RMD160 68c8bcddb3eb518e3b06fff1ba536eecb59015a9 SHA1 ce5ac0e6ad70aa67d50a294e7d16f4567b32893c SHA256 5ffd20f9cf5ab02da189c11d970161058af956f29a0a85b4804a09df16b5ce67
