@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-kde-meta-4.6.0-r2 (10 Jun 2011)
+
+  10 Jun 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +cl-kde-meta-4.6.0-r2.ebuild:
+  Add kdepim 4.6.0 support
+
 *cl-kde-meta-4.6.0-r1 (09 Feb 2011)
 
   09 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
